# fl_caption

./: .gitignore  .metadata  README.md  onnx_sdks.txt  pubspec.yaml
.fvm/: flutter_sdk
.github/: copilot-instructions.md
.github/workflows/: linux_build.yml  macos_build.yml  windows_build.yml
assets/models/: silero-vad-v5_q4.onnx
assets/whisper/: base-config.json  distil-large-v3.5-config.json  distil-large-v3.5-tokenizer.json  ja-anime-v0.1-config.json  ja-anime-v0.3-config.json  ja-anime-v0.3-tokenizer.json  large-v3-turbo_q4_1-config.json  medium_q4k-config.json
assets/whisper/onnx/: whisper-base-config.json  whisper-large-v3-turbo-config.json
lib/: main.dart  settings.dart
lib/common/: dialog_utils.dart  settings_provider.dart  settings_provider.freezed.dart  settings_provider.g.dart
lib/common/io/: http.dart
lib/common/rust/: frb_generated.dart  frb_generated.io.dart
lib/common/rust/api/: lingua_spark.dart  text_util.dart  whisper.dart
lib/common/rust/candle_models/whisper/: model.dart
lib/common/rust/lingua_spark/: translation.dart
lib/common/rust/whisper_caption/: whisper.dart
lib/common/translate/: translate_provider.dart  translate_provider.g.dart
lib/common/utils/: window_util.dart
lib/common/whisper/: language.dart  models.dart  onnx_models.dart  provider.dart  provider.freezed.dart  provider.g.dart
lib/dialogs/: model_download_dialog.dart  model_download_provider.dart  model_download_provider.freezed.dart  model_download_provider.g.dart
lib/pages/settings/: about_page.dart  settings_page.dart  settings_page_captions.dart  settings_page_inference.dart  settings_page_llm.dart  settings_page_whisper.dart  settings_provider.dart  settings_provider.freezed.dart  settings_provider.g.dart
lib/widgets/: error.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
linux/runner/: my_application.cc
macos/: Podfile
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/: DebugProfile.entitlements  Info.plist  Release.entitlements
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
rust/: .gitignore  Cargo.toml
rust/.cargo/: config.toml
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: lingua_spark.rs  mod.rs  text_util.rs  whisper.rs
rust/src/audio_capture/: cpal_capture.rs  macos_capture.rs  mod.rs  pipewire_capture.rs  traits.rs
rust/src/candle_models/: mod.rs  multilingual.rs
rust/src/candle_models/whisper/: mod.rs  model.rs  multilingual.rs
rust/src/lingua_spark/: mod.rs  translation.rs
rust/src/onnx/: mod.rs  sense_voice_onnx.rs
rust/src/onnx_models/: mod.rs  sense_voice.rs
rust/src/onnx_models/sense_voice/: def.rs  mod.rs  model.rs
rust/src/onnx_models/vad/: mod.rs
rust/src/onnx_models/whisper/: mod.rs  model.rs  multilingual.rs
rust/src/vad/: mod.rs
rust/src/whisper_caption/: mod.rs  multilingual.rs  whisper.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: rust_lib_fl_caption.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_fl_caption.podspec
rust_builder/windows/: CMakeLists.txt
scripts/: build.ps1  build_linux.sh  build_macos.sh  build_utils.sh  build_windows.ps1  build_windows_no_cuda.ps1  setup_cuda.ps1
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
