[package]
name = "rust_lib_fl_caption"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.9.0"
tokio = { version = "1.44.2", features = ["full"] }
tokio-util = "0.7.15"
anyhow = "1.0"
candle-core = { version = "0.8.4" }
candle-nn = { version = "0.8.4" }
candle-transformers = { version = "0.9.0" }
candle-onnx = { version = "0.9.0" }
tokenizers = "0.21.0"
serde_json = "1.0.140"
rand = "0.9.1"
rand_distr = "0.5.1"
cpal = "0.15.2"
byteorder = "1.5.0"
rubato = "0.16.2"
once_cell = "1.21.3"
uuid = { version = "1.4.1", features = ["v4"] }
native-dialog = "0.7.0"
rayon = "1.10.0"

[target.'cfg(any(target_os = "windows", target_os = "linux"))'.dependencies]
candle-core = { version = "0.8.4", features = ["cuda"] }
candle-nn = { version = "0.8.4", features = ["cuda"] }
candle-transformers = { version = "0.8.4", features = ["cuda"] }

[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { version = "0.8.4", features = ["metal"] }
candle-nn = { version = "0.8.4", features = ["metal"] }
candle-transformers = { version = "0.8.4", features = ["metal"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = false
